# halo2curves

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
.config/: typos.toml
.github/: release-pr-template.ejs
.github/workflows/: ci.yml  release.yml
benches/: bn256_field.rs  curve.rs  fft.rs  field_arith.rs  group.rs  hash_to_curve.rs  less_than.rs  msm-alt.rs  msm.rs  pairing.rs
derive/: Cargo.toml
derive/src/: lib.rs  utils.rs
derive/src/field/: arith.rs  mod.rs
derive/src/field/asm/: limb4.rs  mod.rs
script/: bn256.py  get_current_version.sh
src/: arithmetic.rs  binops.rs  bn256.rs  common.rs  curve.rs  curves.rs  ec.rs  encoding.rs  ff_inverse.rs  ff_jacobi.rs  fft.rs  fields.rs  hash_to_curve.rs  legendre.rs  lib.rs  macros.rs  msm.rs  multicore.rs  pairing.rs  serde.rs  utils.rs  zal.rs
src/arithmetic/: curves.rs  fields.rs  lc.rs  pairing.rs
src/bandersnatch/: curve.rs  fp.rs  fr.rs  mod.rs  te_curve.rs
src/bandersnatch/te_curve/: util.rs
src/bls12381/: engine.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs
src/bls12_381/: endo.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  g1.rs  g2.rs  mod.rs  pairings.rs  scalar.rs
src/bls12_381/hash_to_curve/: chain.rs  expand_msg.rs  map_g1.rs  map_g2.rs  map_scalar.rs  mod.rs
src/bn256/: assembly.rs  common.rs  curve.rs  ec.rs  engine.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g.rs  mod.rs
src/bn256/fr/: table_tests.rs
src/bn256/fr_internal/: table_tests.rs
src/bn256/msm/: mod.rs  pr40.rs  round.rs  zcash.rs
src/derive/: curve.rs  field.rs  field_ext.rs  hashtocurve.rs  mod.rs  pairing.rs
src/derive/field/: common.rs  limb4.rs  limb7.rs  mod.rs  tower.rs
src/ff_ext/: cubic.rs  inverse.rs  jacobi.rs  mod.rs  quadratic.rs
src/fields/: fq.rs  fr.rs
src/grumpkin/: curve.rs  mod.rs
src/jubjub/: curve.rs  fr.rs  mod.rs
src/maybe_u64/: arithmetic.rs  conversion.rs  field.rs  misc.rs  mod.rs  prime_field.rs  serdes.rs  tests.rs
src/pasta/: curve.rs  fp.rs  fq.rs  mod.rs  pallas.rs  vesta.rs
src/pluto_eris/: curve.rs  engine.rs  eris.rs  fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  mod.rs  pluto.rs
src/pluto_eris/fields/: fp.rs  fp12.rs  fp2.rs  fp6.rs  fq.rs  mod.rs
src/secp256k1/: common.rs  curve.rs  fp.rs  fq.rs  mod.rs
src/secp256r1/: curve.rs  fp.rs  fq.rs
src/secq256k1/: curve.rs  mod.rs
src/secq256r1/: curve.rs  mod.rs
src/t256/: curve.rs  fp.rs  mod.rs
src/tests/: curve.rs  field.rs  mod.rs  pairing.rs
src/tests/field/: arith.rs  constants.rs  extensions.rs  legendre.rs  serde.rs
