[package]
name = "halo2curves"
version = "0.8.0"
authors = ["Privacy Scaling Explorations team"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/privacy-scaling-explorations/halo2curves"
readme = "README.md"
description = "Elliptic curve implementations and wrappers for halo2 library"
rust-version = "1.63.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3" }
bincode = "1.3.3"
serde_json = "1.0.105"
hex = "0.4"
rand_chacha = "0.3.1"
impls = "1"
rand = { version = "0.8" }
# getrandom = { version = "0.3.2" }


# Added to make sure we are able to build the lib in the CI.
# Notice this will never be loaded for someone using this lib as dep.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies]
halo2derive = { path = "derive", version = "0.1.0", default-features = false }
subtle = { version = "2.5", default-features = false }
# ! TODO -> remove STD
ff = { version = "0.13.0", default-features = false, features = ["std"] }
group = { version = "0.13.0", default-features = false }
pairing = { version = "0.23.0", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
num-bigint = { version = "0.4.3", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2", default-features = false }
paste = { version = "1.0.11", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
serde_arrays = { version = "0.1.0", optional = true }
hex = { version = "0.4", optional = true, default-features = false, features = [
    "alloc",
    "serde",
] }
# ! This is optional
rayon = { version = "1.8", default-features = false, optional = true }
unroll = { version = "0.1.5", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
plonky2_maybe_rayon = { version = "1.0.0", default-features = false }


[features]
default = ["bits", "std"]
asm = ["halo2derive/asm"]
bits = ["ff/bits"]
bn256-table = []
derive_serde = ["serde/derive", "serde_arrays", "hex"]
print-trace = ["ark-std/print-trace"]
std = ["rayon", "halo2derive/std"]


[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[[bench]]
name = "field_arith"
harness = false

[[bench]]
name = "curve"
harness = false

[[bench]]
name = "hash_to_curve"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "pairing"
harness = false
