[package]
edition = "2021"
name = "halo2derive"
version = "0.1.0"
authors = ["Privacy Scaling Explorations team"]
license = "MIT/Apache-2.0"
repository = "https://github.com/privacy-scaling-explorations/halo2curves"
description = "Derive macros for halo2curves fields."
rust-version = "1.63.0"

[lib]
proc-macro = true

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}

[features]
default = []
asm = []
